pxc/tests/test_11_foreach/fe_st3.px

import io;

function {t} void field_to_string(string n, t fld, string& str_r)
{
  str_r.append("(");
  str_r.append(n);
  str_r.append(" : ");
  str_r.append(string(fld));
  str_r.append(")");
}

struct foo {
  int x;
  long y;
}

function void test()
{
  foo f;
  f.x = 20;
  f.y = 35;
  int i;
  string s = "(";
  foreach (n, fld : foo) {
    string z; // error
    io::println("aaa");
    field_to_string(n, f.fld, z);
    io::println("bbb");
  }
  s.append(" )");
  io::println(s);
}

test();

